--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+nav {
+  padding: 20px 10px;
   color: white;
+  font-size: 1.5rem;
+  text-align: center;
+  background: rgb(3, 110, 105);
 }
 
-.App-link {
-  color: #61dafb;
+.note-form {
+  display: flex;
+  justify-content: center;
+  margin: 50px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.note-form input {
+  padding: 4px 4px;
+  outline: none;
+  height: 40px;
+  border-radius: 5px;
+  background-color: #c5e1ff;
+  border: 2px solid #007bff;
+}
+
+.note-form button {
+  margin-left: 10px;
+  color: white;
+  background: #007bff;
+  padding: 13px 17px;
+  border: none;
+  border-radius: 5px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.notes-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.note {
+  width: 20%;
+  margin: 10px;
+  padding: 13px;
+  border-radius: 5px;
+  border: solid lightgray 1px;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btn-container button {
+  margin-right: 10px;
+}
+
+.edit {
+  color: white;
+  background: rgb(3, 110, 105);
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.delete {
+  color: white;
+  background: #dc3545;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
 }
